commit translated contents

--- a/docs/code-quality/c26431.md
+++ b/docs/code-quality/c26431.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26431 DONT_TEST_NOTNULL'
 title: C26431
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26431
 ms.assetid: 40be6032-c8de-49ab-8e43-e8eedc0ca0ba
-ms.openlocfilehash: 23b74af137d7d20e2e60f3ea63f34fd2195dff58
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: a6159f24eaf44a245b547a4ee133023d909e6240
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88843820"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97224127"
 ---
 # <a name="c26431-dont_test_notnull"></a>C26431 DONT_TEST_NOTNULL
 
@@ -22,7 +23,7 @@ ms.locfileid: "88843820"
 
 Il tipo di marcatore GSL:: not_null dalla libreria di supporto delle linee guida viene usato per indicare chiaramente i valori che non sono mai puntatori null. Causa un errore hardware se tale presupposto non viene mantenuto in fase di esecuzione. Ovviamente, non è necessario verificare la presenza di valori null se l'espressione restituisce un risultato di tipo GSL:: not_null.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Poiché GSL:: not_null stessa è una classe wrapper del puntatore sottile, la regola tiene traccia delle variabili temporanee che contengono i risultati delle chiamate all'operatore di conversione di overload (che restituisce l'oggetto puntatore contenuto). Questa logica rende questa regola applicabile a espressioni che coinvolgono variabili e che infine hanno come risultato il tipo GSL:: not_null. Ma attualmente ignora le espressioni che contengono chiamate di funzione che restituiscono GSL:: not_null.
   - L'euristica corrente per i controlli di nullità rileva i contesti seguenti:
