--- a/docs/code-quality/c26433.md
+++ b/docs/code-quality/c26433.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26433 OVERRIDE_EXPLICITLY'
 title: C26433
 keywords: C26433
 ms.date: 01/18/2017
@@ -9,30 +10,30 @@ helpviewer_keywords:
 - C26433
 dev_langs:
 - C++
-ms.openlocfilehash: 2dc93f90d9ba8b15e4c4c7297b3b053fb843fa82
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 829784409cb879624b778c8cd1dfba4bfcd43034
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369591"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97224089"
 ---
-# <a name="c26433-override_explicitly"></a>C26433 OVERRIDE_EXPLICITLY
+# <a name="c26433-override_explicitly"></a>OVERRIDE_EXPLICITLY C26433
 
-La funzione deve essere contrassegnata con`override`
+La funzione deve essere contrassegnata con `override`
 
-## <a name="c-core-guidelines"></a>Linee guida di base di C
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
-[C.128: Le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
 
-Non è richiesto dal compilatore di dichiarare chiaramente che una funzione virtuale esegue l'override della relativa base. La non `override` specificazione può causare problemi lievi durante la manutenzione se la specifica virtuale viene modificata nella gerarchia di classi. Riduce inoltre la leggibilità e rende meno evidente il comportamento polimorfico di un'interfaccia. Se una funzione è `override`chiaramente contrassegnata come , consente al compilatore di verificare la coerenza dell'interfaccia e contribuire a individuare i problemi prima che si manifestino in fase di esecuzione.
+Il compilatore non è necessario per indicare chiaramente che una funzione virtuale esegue l'override della relativa base. La mancata specifica `override` può causare problemi complessi durante la manutenzione se la specifica virtuale viene modificata nella gerarchia di classi. Riduce inoltre la leggibilità e rende meno ovvio il comportamento polimorfico di un'interfaccia. Se una funzione è chiaramente contrassegnata come `override` , consente al compilatore di verificare la coerenza dell'interfaccia e di individuare i problemi prima che si manifestino in fase di esecuzione.
 
 ## <a name="notes"></a>Note
 
-1. Questa regola non è applicabile ai distruttori. I distruttori hanno le proprie specifiche di virtualità.
-1. La regola non contrassegna le `final`funzioni contrassegnate in modo esplicito come , che è a sua volta una varietà speciale di identificatore virtuale.
-1. Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Può essere fonte di confusione, poiché le definizioni non dispongono di identificatori virtuali, ma l'avviso è ancora corretto.
+1. Questa regola non è applicabile ai distruttori. I distruttori hanno le proprie specifiche di virtualizzazione.
+1. La regola non contrassegna le funzioni in modo esplicito come `final` , che è a sua volta una speciale varietà di identificatore virtuale.
+1. Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Potrebbe creare confusione, poiché le definizioni non hanno identificatori virtuali, ma l'avviso è ancora corretto.
 
-## <a name="example--implicit-overriding"></a>Esempio: override implicitoExample: Implicit overriding
+## <a name="example--implicit-overriding"></a>Esempio: override implicito
 
 ```cpp
 class Shape {
@@ -49,6 +50,6 @@ public:
 };
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[C.128: Le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
