--- a/docs/code-quality/c28206.md
+++ b/docs/code-quality/c28206.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28206'
 title: C28206
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28206
 ms.assetid: 27500f97-fe59-452c-8d9c-4258cb44764c
-ms.openlocfilehash: 9f3ce61e47aac59e97326c80cdfbf26e99da02a5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: ed3dbfdb792409c78aadc179c5837c6d426597a6
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417584"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97223984"
 ---
 # <a name="c28206"></a>C28206
 
-> avviso C28206: \<espressione >: l'operando sinistro punta a uno struct, utilizzare `->`
+> avviso C28206: \<expression> : l'operando sinistro punta a uno struct, usare `->`
 
-Questo avviso viene segnalato quando è prevista la notazione di dereferenziazione del puntatore dello struct `->`.
+Questo avviso viene segnalato quando era prevista la notazione di dereferenziazione del puntatore dello struct `->` .
