--- a/docs/code-quality/c6102.md
+++ b/docs/code-quality/c6102.md
@@ -1,26 +1,27 @@
 ---
+description: 'Altre informazioni su: C6102'
 title: C6102
 ms.date: 11/04/2016
 ms.topic: reference
 f1_keywords:
 - C6102
 ms.assetid: cfd49a8c-df46-48de-8dcb-02ecf2450034
-ms.openlocfilehash: dea312bad010785b9f2698728eab7b3b333a75b4
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 103d58bc0d40d69bbb898305556ae5b81531fb83
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420769"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97221449"
 ---
 # <a name="c6102"></a>C6102
 
-> avviso C6102: utilizzo di \<variabile > dalla chiamata di funzione non riuscita alla riga \<percorso >.
+> avviso C6102: utilizzo \<variable> di dalla chiamata di funzione non riuscita alla riga \<location> .
 
-Questo avviso viene segnalato anziché [C6001](../code-quality/c6001.md) quando una variabile non è impostata perché è stata contrassegnata come parametro `_Out_` in una chiamata di funzione precedente non riuscita.
+Questo avviso viene segnalato anziché [C6001](../code-quality/c6001.md) quando una variabile non è impostata perché è stata contrassegnata come `_Out_` parametro in una chiamata di funzione precedente non riuscita.
 
 Il problema potrebbe essere causato dal fatto che la funzione chiamata precedente non è completamente annotata. Può richiedere `_Always_`, `_Outptr_result_nullonfailure_` (`_COM_Outptr_` per il codice COM) o un'annotazione correlata.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [C6001](../code-quality/c6001.md)
 - [Uso delle annotazioni SAL per ridurre gli errori del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md)
