--- a/docs/code-quality/c6103.md
+++ b/docs/code-quality/c6103.md
@@ -1,25 +1,26 @@
 ---
+description: 'Altre informazioni su: C6103'
 title: C6103
 ms.date: 11/04/2016
 ms.topic: reference
 f1_keywords:
 - C6103
 ms.assetid: 22d1ab35-31a3-4ba9-8ef4-7a64bce66621
-ms.openlocfilehash: f52003bf7bd27390b7ee6332769b0e24226bc364
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8158753a8ca4cfa5e46b3a7f7dfe577bd8ae657a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420748"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97221475"
 ---
 # <a name="c6103"></a>C6103
 
-> avviso C6103: la restituzione di \<variabile > dalla chiamata di funzione non riuscita alla riga \<percorso >.
+> avviso C6103: la restituzione \<variable> dalla chiamata di funzione non riuscita alla riga \<location> .
 
 Un percorso corretto tramite la funzione restituisce una variabile utilizzata come parametro `_Out_` a una chiamata di funzione interna non riuscita.
 
 Il problema potrebbe essere causato dal fatto che la funzione chiamata e la funzione chiamante non sono completamente annotate. La funzione chiamata può richiedere `_Always_`, `_Outptr_result_nullonfailure_` (`_COM_Outptr_` per codice COM) o un'annotazione correlata e la funzione chiamante può richiedere un'annotazione `_Success_`. Un'altra causa possibile del problema consiste nel fatto che l'annotazione `_Success_` nella funzione chiamata non è corretta.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Uso delle annotazioni SAL per ridurre gli errori del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md)
