--- a/docs/code-quality/c26472.md
+++ b/docs/code-quality/c26472.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26472 NO_CASTS_FOR_ARITHMETIC_CONVERSION'
 title: C26472
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26472
 ms.assetid: 51e215a7-0e0a-4e6c-bff1-805bf5b1af29
-ms.openlocfilehash: cf82ee26831a4849331ffe1a9c853bc291eb9a9a
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 85bbc163129b415a4deb50556d6633fc8a8a8b10
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88841467"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97224075"
 ---
 # <a name="c26472-no_casts_for_arithmetic_conversion"></a>NO_CASTS_FOR_ARITHMETIC_CONVERSION C26472
 
@@ -25,7 +26,7 @@ Questa regola consente di individuare le posizioni in cui vengono utilizzati i c
 - GSL:: Narrow garantisce la conversione senza perdita di perdite e causa un arresto anomalo della fase di esecuzione, se non è possibile.
 - GSL:: narrow_cast indica chiaramente che la conversione può perdere dati ed è accettabile.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questa regola è implementata solo per static_casts. L'uso di cast di tipo C è in genere sconsigliato.
 
