--- a/docs/code-quality/c28204.md
+++ b/docs/code-quality/c28204.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28204'
 title: C28204
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28204
 ms.assetid: e614e33f-4ba3-4c68-ae0c-3a667d64b044
-ms.openlocfilehash: f5c9ac110de17647e8af4b1b88b6d32c7a2cca7e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 3bbc915a7221db250182ce99cc6a87ddc001294c
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417598"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97224010"
 ---
 # <a name="c28204"></a>C28204
 
-> avviso C28204: \<Function >: solo uno di questi overload e quello in \<filename > (\<line >) sono annotati per \<paramName >: non è necessario annotare entrambi o nessuno.
+> avviso C28204: \<function> : solo uno di questi overload e quello in \<filename> ( \<line> ) sono annotati per: è necessario annotare \<paramname> entrambi o nessuno dei due.
 
 Questo avviso viene segnalato quando si verifica un errore nelle annotazioni.
