--- a/docs/code-quality/c28205.md
+++ b/docs/code-quality/c28205.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28205'
 title: C28205
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C28205
 ms.assetid: 3d802885-bdb8-47cb-9108-527a328a0774
-ms.openlocfilehash: 18c97b7185628e8b736651dc0ea902216e23b769
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c6421cb20da6e1bc1af167a8173639755ff2fd5b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416464"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97223997"
 ---
 # <a name="c28205"></a>C28205
 
-> avviso C28205: funzione >: `_Success_` o `_On_failure_` utilizzato in un contesto non valido
+> avviso C28205: funzione>: `_Success_` o `_On_failure_` utilizzato in un contesto non valido
 
-Le annotazioni `_Success_` e `_On_failure_` possono essere utilizzate solo sui valori restituiti dalla funzione.
+Le `_Success_` `_On_failure_` annotazioni e possono essere usate solo sui valori restituiti della funzione.
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 ```cpp
 #include<sal.h>
