--- a/docs/code-quality/c28208.md
+++ b/docs/code-quality/c28208.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28208'
 title: C28208
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28208
 ms.assetid: e9a8ce37-3b05-4202-b078-5570ae496d1d
-ms.openlocfilehash: 2dc85727c6f61238027ca1bd18e2ee0e3945cb95
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cddc8ad94e906494e547edb90dad99100ca3641a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417577"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97223893"
 ---
 # <a name="c28208"></a>C28208
 
-> avviso C28208: la funzione \<> è stata precedentemente definita con un elenco di parametri diverso in \<file > (\<riga >). Alcuni strumenti di analisi produrranno risultati non corretti
+> avviso C28208: \<function> la funzione è stata precedentemente definita con un elenco di parametri diverso in \<file> ( \<line> ). Alcuni strumenti di analisi produrranno risultati non corretti
 
 Questo avviso viene segnalato quando la definizione nota di una funzione non corrisponde a un'altra occorrenza.
