--- a/docs/code-quality/c6200.md
+++ b/docs/code-quality/c6200.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6200'
 title: C6200
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6200
 ms.assetid: bbeb159b-4e97-4317-9a07-bb83cd03069a
-ms.openlocfilehash: 1d6b949c243fcf76f62d5e666cbd8e4aa821f9b9
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 5c1c7756113ade1c2ba7fe1b2c927ab0512ee5b0
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87227738"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97223815"
 ---
 # <a name="c6200"></a>C6200
 
-> avviso C6200: l'indice \<name> non è compreso nell'intervallo valido per il \<min> \<max> buffer non dello stack\<variable>
+> avviso C6200: l'indice \<name> non è compreso nell'intervallo valido per il \<min> \<max> buffer non dello stack \<variable>
 
 Questo avviso indica che un offset integer nella matrice specificata supera i limiti massimi di tale matrice. Questo difetto può causare un comportamento casuale o un arresto anomalo.
 
