--- a/docs/code-quality/c6201.md
+++ b/docs/code-quality/c6201.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6201'
 title: C6201
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6201
 ms.assetid: eefbbd77-007c-4f28-95f6-6de5ee6a27db
-ms.openlocfilehash: 633cedd8fedef96f01e50fa1dd5ac2144ab6c5e9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6b0535f9e7dc36b59ae10103016e21dd6eacbb79
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420685"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97223802"
 ---
 # <a name="c6201"></a>C6201
 
-> avviso C6201: sovraccarico del buffer per \<variabile >, probabilmente allocato nello stack: index \<Name > non è compreso nell'intervallo di indici validi \<min > \<max >
+> avviso C6201: sovraccarico del buffer per \<variable> , probabilmente allocato nello stack. l'indice non \<name> è compreso nell'intervallo valido \<min> per l'indice \<max>
 
 Questo avviso indica che un offset integer nella matrice di stack specificata supera i limiti massimi di tale matrice. Questo difetto può causare un comportamento casuale o un arresto anomalo.
 
-Una delle cause comuni di questo difetto è l'uso della dimensione di una matrice come indice nella matrice. Poiché l'indicizzazione di C/C++ array è in base zero, l'indice massimo consentito in una matrice è inferiore al numero di elementi della matrice.
+Una delle cause comuni di questo difetto è l'uso della dimensione di una matrice come indice nella matrice. Poiché l'indicizzazione delle matrici C/C++ è in base zero, l'indice massimo consentito in una matrice è inferiore al numero di elementi della matrice.
 
 ## <a name="example"></a>Esempio
 
