--- a/docs/code-quality/c26449.md
+++ b/docs/code-quality/c26449.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26449 NO_SPAN_FROM_TEMPORARY'
 title: C26449
 ms.date: 03/22/2018
 ms.topic: reference
@@ -6,27 +7,27 @@ f1_keywords:
 - C26449
 helpviewer_keywords:
 - C26449
-ms.openlocfilehash: 89fc3df392bbb6358e347735f5b8b638647e749c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 013d4785723ef87577fa7ae00597c47a0864236c
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418130"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97258616"
 ---
-# <a name="c26449-no_span_from_temporary"></a>C26449 NO_SPAN_FROM_TEMPORARY
+# <a name="c26449-no_span_from_temporary"></a>NO_SPAN_FROM_TEMPORARY C26449
 
-`gsl::span` o `std::string_view` creati da un oggetto temporaneo non saranno validi se la temporanea viene invalidata.
+`gsl::span` o `std::string_view` creato da un oggetto temporaneo non sarà valido quando l'oggetto temporaneo viene invalidato.
 
-C++Linee guida di base: [GSL. View: viste](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#gslview-views).
+Linee guida di base di C++: [GSL. View: viste](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#gslview-views).
 
 Gli intervalli e le visualizzazioni sono tipi pratici e leggeri che consentono di fare riferimento a buffer di memoria. Ma devono essere usati con cautela: mentre l'interfaccia è simile a quella dei contenitori standard, il loro comportamento è più simile al comportamento di puntatori e riferimenti. Non sono proprietari di dati e non devono mai essere costruiti da buffer temporanei. Questo controllo è incentrato sui casi in cui i dati di origine sono temporanei, mentre span o View non lo sono. È presente un altro controllo che gestisce scenari leggermente diversi che coinvolgono riferimenti a intervalli: [C26445 NO_SPAN_REF](c26445.md). Entrambe le regole consentono di evitare piccoli errori, ma pericolosi, quando il codice legacy viene modernizzato e adotta intervalli o visualizzazioni.
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Commenti
 
-- Questa regola genera un avviso sulle posizioni in cui i costruttori vengono richiamati per intervalli o viste e il buffer dei dati di origine appartiene a un oggetto temporaneo creato nella stessa istruzione. vale a dire:
+- Questa regola genera un avviso sulle posizioni in cui i costruttori vengono richiamati per intervalli o viste e il buffer dei dati di origine appartiene a un oggetto temporaneo creato nella stessa istruzione. ad esempio:
   - conversioni implicite nelle istruzioni return;
   - conversioni implicite in operatori ternari;
-  - conversioni esplicite nelle espressioni `static_cast`;
+  - conversioni esplicite nelle `static_cast` espressioni;
   - chiamate di funzione che restituiscono contenitori per valore.
 - Temporaries creati per gli argomenti di chiamata di funzione non sono contrassegnati. È possibile passare le estendenze da tali temporaries se le funzioni di destinazione non conservano i puntatori dati in variabili esterne.
 - Se gli intervalli o le viste sono a loro volta temporaries, la regola li ignora.
