--- a/docs/code-quality/c6302.md
+++ b/docs/code-quality/c6302.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6302'
 title: C6302
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6302
 ms.assetid: b0b33103-6a0a-4c5b-bdb4-1b55ce877e74
-ms.openlocfilehash: af1d6e8659477c2d2083d9f2368032cf6a0562ee
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c596103cde884d0125908384c1f63aef9bbbc09f
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419915"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97258538"
 ---
 # <a name="c6302"></a>C6302
 
-> avviso C6302: stringa di formato non corrispondente: stringa di caratteri passata come parametro \<numero > quando è richiesta una stringa di caratteri wide nella chiamata a \<funzione >
+> avviso C6302: stringa di formato non corrispondente: stringa di caratteri passata come parametro \<number> quando è richiesta una stringa di caratteri wide nella chiamata a \<function>
 
 Questo avviso indica che la stringa di formato specifica che è prevista una stringa di caratteri wide. Tuttavia, viene passata una stringa di caratteri. In questo modo l'output potrebbe non essere corretto o il programma si arresterà in modo anomalo in fase di esecuzione.
 
@@ -34,7 +35,7 @@ void f()
 }
 ```
 
-Il codice di esempio seguente usa `%hs` per specificare una stringa di caratteri a byte singolo con `wprintf_s` funzione:
+Il codice di esempio seguente usa `%hs` per specificare una stringa di caratteri a byte singolo con la `wprintf_s` funzione:
 
 ```cpp
 #include <stdio.h>
