commit translated contents

--- a/docs/error-messages/compiler-warnings/C4464.md
+++ b/docs/error-messages/compiler-warnings/C4464.md
@@ -1,32 +1,33 @@
 ---
-title: Del compilatore (livello 4) Avviso C4464
+description: 'Altre informazioni su: avviso del compilatore (livello 4) C4464'
+title: Avviso del compilatore (livello 4) C4464
 ms.date: 03/13/2018
 f1_keywords:
 - C4464
 helpviewer_keywords:
 - C4464
-ms.openlocfilehash: 698169e334ef9236b08c5ddcae36277988ff01ed
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: b104d131cc5dd75c75bdd695b96a7e651c2b24a6
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62281257"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238557"
 ---
-# <a name="compiler-warning-level-4-c4464"></a>Del compilatore (livello 4) Avviso C4464
+# <a name="compiler-warning-level-4-c4464"></a>Avviso del compilatore (livello 4) C4464
 
-> **percorso di inclusione relativo contiene '.. '**
+> **il percorso di inclusione relativo contiene '. .'**
 
-Oggetto `#include` direttiva ha un percorso che include un '.. ' Identificatore di directory padre.
+Una `#include` direttiva ha un percorso che include '. .' identificatore di directory padre.
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Commenti
 
-A partire da Visual Studio 2015 Update 1, il compilatore può rilevare una direttiva include che contiene un '.. ' segmento di percorso e dei problemi a un avviso, se abilitato. Il codice scritto in questo modo è in genere usato in modo da includere le intestazioni che esistono di fuori del progetto usando in modo non corretto percorsi relativi al progetto. In questo modo viene creata un rischio che il programma potesse essere compilato con incluso un file di origine diversa rispetto al programmatore nelle intenzioni o che i percorsi relativi non sarebbero stati portabili in altri ambienti di compilazione. Sebbene non sia non specifiche di avviso, è consigliabile anche che non si utilizza un segmento di percorso di directory padre per specificare il progetto dalla directory di inclusione.
+A partire da Visual Studio 2015 Update 1, il compilatore può rilevare una direttiva include che contiene un'. .' segmento di percorso ed emettere un avviso, se abilitato. Il codice scritto in questo modo è in genere usato in modo da includere le intestazioni che esistono di fuori del progetto usando in modo non corretto percorsi relativi al progetto. Questo crea il rischio che il programma possa essere compilato includendo un file di origine diverso da quello che il programmatore intende o che questi percorsi relativi non sarebbero portabili in altri ambienti di compilazione. Anche se non è presente alcun avviso specifico, è consigliabile non usare un segmento del percorso della directory padre per specificare le directory di inclusione del progetto.
 
-Questo avviso è stato introdotto in Visual Studio 2015 Update 1 ed è disattivata per impostazione predefinita. Uso [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivate per impostazione predefinita, o __/w__*n*__4464__ abilitare C4464 come livello *n* avviso. Per altre informazioni, vedere [del compilatore avvisi che sono disattivata per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi dalla versione del compilatore, vedere [gli avvisi del compilatore dalla versione del compilatore](compiler-warnings-by-compiler-version.md).
+Questo avviso è nuovo in Visual Studio 2015 Update 1 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__4464__ per abilitare C4464 come avviso di livello *n* . Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
 
 ## <a name="example"></a>Esempio
 
-File del codice sorgente che usano '.. ' i segmenti di percorso possono attivare questo avviso quando la **/Wall** è specificata l'opzione:
+File di codice sorgente che usano '. .' i segmenti di percorso possono generare questo avviso quando viene specificata l'opzione **/Wall** :
 
 ```cpp
 #include "..\headers\C4426.h"  // emits warning C4464
