--- a/docs/error-messages/compiler-warnings/c4371.md
+++ b/docs/error-messages/compiler-warnings/c4371.md
@@ -1,21 +1,22 @@
 ---
-title: Compilatore avviso (livello 3) C4371
+description: 'Altre informazioni su: avviso del compilatore (livello 3) C4371'
+title: Avviso del compilatore (livello 3) C4371
 ms.date: 01/31/2018
 f1_keywords:
 - C4371
 helpviewer_keywords:
 - C4371
-ms.openlocfilehash: fcd04a12602e3d58154de5ee4596b8d8427a5111
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 05005bd635cb621d7047d5f8dc505d06b56ab53b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62281135"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238544"
 ---
-# <a name="compiler-warning-level-3-c4371"></a>Compilatore avviso (livello 3) C4371
+# <a name="compiler-warning-level-3-c4371"></a>Avviso del compilatore (livello 3) C4371
 
-> «*NomeClasse*': layout della classe sia stato modificato da una versione precedente del compilatore per migliorare la compressione del membro '*membro*»
+> '*NomeClasse*': è possibile che il layout della classe sia stato modificato rispetto a una versione precedente del compilatore a causa di una migliore compressione del membro '*member*'
 
-Se il codice si basa su un layout di memoria specifico per una classe, avviso C4371 indica che il layout creato dal compilatore corrente potrebbe essere diverso dal layout generato da versioni precedenti del compilatore. Può trattarsi significativo per le operazioni di serializzazione o le interfacce di sistema operativo che si basano su un layout di memoria specifico. In molti altri casi, è possibile ignorare questo avviso.
+Se il codice si basa su un particolare layout di memoria per una classe, avviso C4371 indica che il layout creato dal compilatore corrente può essere diverso dal layout generato dalle versioni precedenti del compilatore. Questo può essere significativo per le operazioni di serializzazione o le interfacce del sistema operativo basate su un particolare layout di memoria. Nella maggior parte degli altri casi, questo avviso è sicuro da ignorare.
 
-Avviso C4371 è disattivata per impostazione predefinita. Per altre informazioni, vedere [del compilatore avvisi che sono disattivata per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md).
+L'avviso C4371 è disattivato per impostazione predefinita. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md).
