--- a/docs/error-messages/compiler-warnings/c4477.md
+++ b/docs/error-messages/compiler-warnings/c4477.md
@@ -1,16 +1,17 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore (livello 1) C4477'
 title: Avviso del compilatore C4477
 ms.date: 02/16/2018
 f1_keywords:
 - C4477
 helpviewer_keywords:
 - C4477
-ms.openlocfilehash: 440e51c7a72bc3648aa0363fdd04ae4ecb3cc361
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: ba99089c5923f0684757fb0f4c4321a35c45a895
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87231949"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238479"
 ---
 # <a name="compiler-warning-level-1-c4477"></a>Avviso del compilatore (livello 1) C4477
 
@@ -18,7 +19,7 @@ ms.locfileid: "87231949"
 
 Il compilatore ha rilevato una mancata corrispondenza tra il tipo di argomento necessario per soddisfare il segnaposto in una stringa di formato e il tipo di argomento fornito. Per utilizzare correttamente le famiglie printf e scanf delle funzioni Variadic, è necessario fornire gli argomenti dei tipi specificati dalla stringa di formato. Una mancata corrispondenza indica in genere la presenza di un bug nel codice.
 
-Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione*Function, vedere la documentazione.
+Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione* Function, vedere la documentazione.
 
 Questo avviso è nuovo in Visual Studio 2015.
 
