--- a/docs/error-messages/compiler-warnings/c4596.md
+++ b/docs/error-messages/compiler-warnings/c4596.md
@@ -1,22 +1,23 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore (livello 4) C4596'
 title: Avviso del compilatore (livello 4) C4596
 ms.date: 08/15/2019
 f1_keywords:
 - C4596
 helpviewer_keywords:
 - C4596
-ms.openlocfilehash: 0b8d0defbd97485c622551288d691c8666250d29
-ms.sourcegitcommit: d3829ae0c3db909f96057755a80665f5ea4896ea
+ms.openlocfilehash: 4261f5063d7d33cfa036cc855151c61cc48b1f9b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/16/2019
-ms.locfileid: "69559324"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238388"
 ---
 # <a name="compiler-warning-level-4-c4596"></a>Avviso del compilatore (livello 4) C4596
 
 > '*Name*': nome completo non valido nella dichiarazione di membro
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Commenti
 
 Una dichiarazione di membro ha una qualificazione imprevista. Per risolvere il problema, rimuovere la qualifica dall'identificatore.
 
