--- a/docs/error-messages/compiler-warnings/c4473.md
+++ b/docs/error-messages/compiler-warnings/c4473.md
@@ -1,16 +1,17 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore (livello 1) C4473'
 title: Avviso del compilatore C4473
 ms.date: 02/16/2018
 f1_keywords:
 - C4473
 helpviewer_keywords:
 - C4473
-ms.openlocfilehash: a6f7dc7998d8b7da30c3b060111a64959cd60d75
-ms.sourcegitcommit: 6b749db14b4cf3a2b8d581fda6fdd8cb98bc3207
+ms.openlocfilehash: 6e83cfe19f07f7290d5f970d27f051f4d026ca3a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/05/2020
-ms.locfileid: "82825743"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238466"
 ---
 # <a name="compiler-warning-level-1-c4473"></a>Avviso del compilatore (livello 1) C4473
 
@@ -24,7 +25,7 @@ ms.locfileid: "82825743"
 
 Il compilatore ha rilevato una mancata corrispondenza tra il numero di argomenti necessari per soddisfare i segnaposto in una stringa di formato e il numero di argomenti forniti. Per utilizzare correttamente le famiglie printf e scanf delle funzioni Variadic, è necessario specificare tutti gli argomenti specificati dalla stringa di formato. Alcuni segnaposto richiedono argomenti aggiuntivi, per specificare la larghezza, la precisione o la dimensione del buffer, nonché un argomento per il contenuto. Una mancata corrispondenza indica in genere la presenza di un bug nel codice.
 
-Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione*Function, vedere la documentazione.
+Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione* Function, vedere la documentazione.
 
 Questo avviso è nuovo in Visual Studio 2015.
 
