--- a/docs/error-messages/compiler-warnings/c4866.md
+++ b/docs/error-messages/compiler-warnings/c4866.md
@@ -1,24 +1,25 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore (livello 4) C4866'
 title: Avviso del compilatore (livello 4) C4866
 ms.date: 09/30/2018
 f1_keywords:
 - C4866
 helpviewer_keywords:
 - C4866
-ms.openlocfilehash: b66a5a84549f08a6cb034bbd6c6d29a7d6f310ae
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 6e6c7d8d7d13fad7e677d43355108bd2e887dfde
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87231936"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238362"
 ---
 # <a name="compiler-warning-level-4-c4866"></a>Avviso del compilatore (livello 4) C4866
 
 > il compilatore '_file_(*Line_number*)' non può applicare l'ordine di valutazione da sinistra a destra per la chiamata al _operator_name_
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-A partire da c++ 17, gli operandi degli operatori __->\*__ , ** \[ ]**, **>>** e **\<\<** devono essere valutati in ordine da sinistra a destra. Esistono due casi in cui il compilatore non è in grado di garantire questo ordine:
+A partire da c++ 17, gli operandi degli operatori __->\*__ , **\[ ]**, **>>** e **\<\<** devono essere valutati in ordine da sinistra a destra. Esistono due casi in cui il compilatore non è in grado di garantire questo ordine:
 
 - quando una delle espressioni dell'operando è un oggetto passato per valore o contiene un oggetto passato per valore, oppure
 
