--- a/docs/error-messages/compiler-warnings/c5045.md
+++ b/docs/error-messages/compiler-warnings/c5045.md
@@ -1,26 +1,27 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore C5045'
 title: Avviso del compilatore C5045
 ms.date: 06/21/2018
 f1_keywords:
 - C5045
 helpviewer_keywords:
 - C5045
-ms.openlocfilehash: a3190be658472f208ae527976e85d678805cea4e
-ms.sourcegitcommit: 3f91111c0350c0237fddb82766c290307f20e659
+ms.openlocfilehash: b7647feb5bbf990972878ec86e2c7efab98aec54
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/19/2020
-ms.locfileid: "83630511"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238349"
 ---
 # <a name="compiler-warning-c5045"></a>Avviso del compilatore C5045
 
 > Il compilatore inserirà la mitigazione Spectre per il carico di memoria se è stata specificata l'opzione/Qspectre
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 Avviso C5045 consente di vedere quali modelli nel codice provocano l'inserimento di una mitigazione Spectre, ad esempio un LFENCE, quando viene specificata l'opzione del compilatore [/Qspectre](../../build/reference/qspectre.md) . In questo modo è possibile identificare i file di codice interessati dal problema di sicurezza. Questo avviso è puramente informativo: la mitigazione non viene inserita fino a quando non si esegue la ricompilazione con l'opzione **/Qspectre** . La funzionalità di C5045 è indipendente dall'opzione **/Qspectre** , quindi è possibile usarla nella stessa compilazione.
 
-Questo avviso è nuovo in Visual Studio 2017 versione 15,7 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5045__ per abilitare C5045 come avviso di livello *n* . Nell'IDE, il livello di avviso predefinito è **/W3** e questo avviso può essere abilitato nella finestra di dialogo **pagine delle proprietà** del progetto. Aprire **Configuration Properties**  >  la riga di comando**C/C++**  >  **Command Line** delle proprietà di configurazione e nella casella **Opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
+Questo avviso è nuovo in Visual Studio 2017 versione 15,7 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5045__ per abilitare C5045 come avviso di livello *n* . Nell'IDE, il livello di avviso predefinito è **/W3** e questo avviso può essere abilitato nella finestra di dialogo **pagine delle proprietà** del progetto. Aprire   >  la riga di comando **C/C++**  >   delle proprietà di configurazione e nella casella **Opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
 
 ## <a name="example"></a>Esempio
 
@@ -84,7 +85,7 @@ C5045.obj
 
 I messaggi di avviso indicano che è stata inserita una mitigazione nella riga 16. Si nota anche che la mitigazione è necessaria perché l'indice i sulla riga 15 inserisce il carico di memoria alla riga 17. La speculazione viene eseguita su barra e bar1, ma la mitigazione è efficace quando viene posizionata alla riga 16.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Linee guida per sviluppatori C++ per canali laterali di esecuzione speculativa](../../security/developer-guidance-speculative-execution.md)<br/>
 [/Qspectre](../../build/reference/qspectre.md)<br/>
