--- a/docs/error-messages/compiler-warnings/c5046.md
+++ b/docs/error-messages/compiler-warnings/c5046.md
@@ -1,22 +1,23 @@
 ---
+description: 'Altre informazioni su: avviso del compilatore (livello 2) C5046'
 title: Avviso del compilatore C5046
 ms.date: 03/21/2019
 f1_keywords:
 - C5046
 helpviewer_keywords:
 - C5046
-ms.openlocfilehash: 0491e88b6e84f2aea4420f40fd5ef8656cf23424
-ms.sourcegitcommit: effb516760c0f956c6308eeded48851accc96b92
+ms.openlocfilehash: 7a7c326eb2c2f7a55e0164e92f389fe8eae737a9
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/12/2019
-ms.locfileid: "70926245"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97238336"
 ---
 # <a name="compiler-warning-level-2-c5046"></a>Avviso del compilatore (livello 2) C5046
 
-> '*Function*': Simbolo che interessa il tipo con collegamento interno non definito
+> '*Function*': simbolo che interessa il tipo con collegamento interno non definito
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Commenti
 
 Il compilatore ha rilevato l'uso di una funzione che non ha una definizione, ma la firma di questa funzione riguarda i tipi che non sono visibili all'esterno dell'unità di conversione. Poiché questi tipi non sono visibili esternamente, nessun'altra unità di conversione può fornire una definizione per questa funzione, quindi il programma non può essere collegato correttamente.
 
