commit translated contents

--- a/docs/code-quality/c26416.md
+++ b/docs/code-quality/c26416.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26416 NO_RVALUE_REF_SHARED_PTR'
 title: C26416
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26416
 ms.assetid: f158207b-45cf-44cf-8e4b-b5b75b56ea0e
-ms.openlocfilehash: a5af79c8b8baba833b4b7b4d9041c5db0ba51c94
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: d0be1118d19121c15f658907dcf82a2c0cfeb4da
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685291"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255977"
 ---
 # <a name="c26416-no_rvalue_ref_shared_ptr"></a>C26416 NO_RVALUE_REF_SHARED_PTR
 
@@ -22,7 +23,7 @@ ms.locfileid: "90685291"
 
 Il passaggio di un puntatore condiviso per riferimento rvalue non è in genere necessario. A meno che non si tratti di un'implementazione della semantica di spostamento per un tipo di puntatore condiviso, gli oggetti puntatore condivisi possono essere passati in modo sicuro per valore. L'uso di un riferimento rvalue può indicare anche che il puntatore univoco è più appropriato poiché trasferisce chiaramente la proprietà univoca dal chiamante al chiamato.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questo controllo riconosce std:: shared_pointer e i tipi definiti dall'utente che probabilmente si comporteranno come puntatori condivisi. Per i puntatori condivisi definiti dall'utente sono previsti i tratti seguenti:
 
@@ -32,7 +33,7 @@ Il passaggio di un puntatore condiviso per riferimento rvalue non è in genere n
 
 - distruttore pubblico che non viene eliminato né impostato come predefinito. I distruttori vuoti vengono comunque conteggiati come definiti dall'utente.
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 ottimizzazione del costruttore discutibile
 
