--- a/docs/code-quality/c6029.md
+++ b/docs/code-quality/c6029.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6029'
 title: C6029
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6029
 ms.assetid: 07f89261-1b77-4597-9f34-12ce5d569b60
-ms.openlocfilehash: 60f1e215e6f69458ee1c94ff89dac2a454f3e47a
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 148730b3460e3e630040a37b998e9d3302b1d890
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420909"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255873"
 ---
 # <a name="c6029"></a>C6029
 
-> avviso C6029: possibile sovraccarico del buffer nella chiamata a \<funzione >: utilizzo del valore non verificato
+> avviso C6029: possibile sovraccarico del buffer nella chiamata a \<function> : utilizzo del valore non verificato
 
 Questo avviso indica che a una funzione che accetta un buffer e una dimensione viene passata una dimensione non verificata. I dati letti da qualche origine esterna non sono stati verificati per controllare se sono di dimensioni inferiori a quella del buffer. Un utente malintenzionato potrebbe specificare un valore molto maggiore di quello previsto per la dimensione, determinando un sovraccarico del buffer.
 
@@ -82,6 +83,6 @@ bool f(HANDLE hFile)
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
