--- a/docs/code-quality/c26415.md
+++ b/docs/code-quality/c26415.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26415 SMART_PTR_NOT_NEEDED'
 title: C26415
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26415
 ms.assetid: 4165f70a-78ae-4a03-b256-c4bd74b02d09
-ms.openlocfilehash: 45bfdd891cecb029d6abb8dabb222780a0d17f56
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: fbf8af5de936ada8799182057c71324871aadf0e
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685398"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97256029"
 ---
 # <a name="c26415-smart_ptr_not_needed"></a>SMART_PTR_NOT_NEEDED C26415
 
@@ -22,7 +23,7 @@ ms.locfileid: "90685398"
 
 L'utilizzo di un tipo di puntatore intelligente per passare dati a una funzione indica che la funzione di destinazione deve gestire la durata dell'oggetto contenuto. Tuttavia, se la funzione usa solo il puntatore intelligente per accedere all'oggetto contenuto e mai effettivamente chiama il codice che può causare la deallocazione (ovvero non influisce mai sulla sua durata), in genere non è necessario complicare l'interfaccia con i puntatori intelligenti. È preferibile un puntatore normale o un riferimento all'oggetto contenuto.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 Questo controllo copre la maggior parte degli scenari che determinano anche C26410, C26415, C26417 e C26418. È preferibile pulire prima SMART_PTR_NOT_NEEDED e quindi passare a case perimetrali per puntatori condivisi o univoci. Per una pulizia più mirata, questo avviso può essere disabilitato.
 
@@ -37,7 +38,7 @@ L'interpretazione delle operazioni che possono influire sulla durata degli ogget
 - Costruttori di copia o spostamento o operatori di assegnazione
 - Funzioni non costanti
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 Gestione complessa della durata.
 
