--- a/docs/code-quality/c26417.md
+++ b/docs/code-quality/c26417.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26417 NO_LVALUE_REF_SHARED_PTR'
 title: C26417
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26417
 ms.assetid: 0e09fcc6-f9eb-4404-b51e-5815705c6afb
-ms.openlocfilehash: 37dadbb50c3106153028a0b1f26a5d426db6d969
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: c0b264afca1b8403c8a0c9557b99e8a38a53735d
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685248"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255964"
 ---
 # <a name="c26417-no_lvalue_ref_shared_ptr"></a>C26417 NO_LVALUE_REF_SHARED_PTR
 
@@ -22,7 +23,7 @@ ms.locfileid: "90685248"
 
 Il passaggio di puntatori condivisi per riferimento può essere utile negli scenari in cui il codice chiamato aggiorna la destinazione dell'oggetto puntatore intelligente e il chiamante prevede che venga visualizzato tale aggiornamento. L'uso di un riferimento esclusivamente per ridurre i costi di passaggio di un puntatore condiviso è discutibile. Se il codice chiamato accede solo all'oggetto di destinazione e non ne gestisce mai la durata, è più sicuro passare un puntatore o un riferimento non elaborato, anziché esporre i dettagli di gestione delle risorse.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questo controllo riconosce std:: shared_pointer e i tipi definiti dall'utente che probabilmente si comporteranno come puntatori condivisi. Per i puntatori condivisi definiti dall'utente sono previsti i tratti seguenti:
 
@@ -38,7 +39,7 @@ Il passaggio di puntatori condivisi per riferimento può essere utile negli scen
 
 - qualsiasi chiamata a una funzione che accetta un riferimento a un puntatore condiviso non costante può potenzialmente reimpostare o riassegnare il puntatore.
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 complicazione dell'interfaccia non necessaria
 
