commit translated contents

--- a/docs/code-quality/c6284.md
+++ b/docs/code-quality/c6284.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6284'
 title: C6284
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6284
 ms.assetid: f3633df6-2978-4899-8c0b-b495bd869e1a
-ms.openlocfilehash: eed3272213bb677e71f540a19808dd1129784e02
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: f1f781b0bd20c15fd7d32b3a877c07fbc22bcbf3
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91499878"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97250153"
 ---
 # <a name="c6284"></a>C6284
 
@@ -60,7 +61,7 @@ void f()
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [Operatore static_cast](../cpp/static-cast-operator.md)
 - [sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
