commit translated contents

--- a/docs/code-quality/c6268.md
+++ b/docs/code-quality/c6268.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6268'
 title: C6268
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6268
 ms.assetid: fd81e00a-de2f-498b-b3fe-53ce056042d7
-ms.openlocfilehash: df9fdbf8a80b4b3d915e1fee00e81b3e54525f7b
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8449945d09ad1923491b0974f1c96e396984eaad
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420321"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254040"
 ---
 # <a name="c6268"></a>C6268
 
-> avviso C6268: ordine errato delle operazioni: (\<tipo1 >) (\<TIPO2 >) x + y. Possibili parentesi mancanti in (\<tipo1 >) ((\<TIPO2 >) x + y)
+> avviso C6268: ordine errato delle operazioni: ( \<TYPE1> ) ( \<TYPE2> ) x + y. Possibili parentesi mancanti in ( \<TYPE1> ) (( \<TYPE2> ) x + y)
 
 Questo avviso indica che un'espressione cast complessa potrebbe implicare un problema di precedenza quando si esegue l'aritmetica del puntatore. Poiché esegue il cast del gruppo in modo più accurato rispetto agli operatori binari, il risultato potrebbe non essere quello previsto dal programmatore. In alcuni casi, questo errore causa un comportamento errato o un arresto anomalo del programma.
 
