--- a/docs/code-quality/c6269.md
+++ b/docs/code-quality/c6269.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6269'
 title: C6269
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6269
 ms.assetid: a01fa7fa-fc6c-4af7-ac8c-585e44e60cca
-ms.openlocfilehash: e355baf3aa89fb77d42c5cfc90a7b304423a5d53
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 3275bd12cf1481520deaaec46ad87a94edb8db99
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420328"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254001"
 ---
 # <a name="c6269"></a>C6269
 
@@ -28,7 +29,7 @@ Una delle cause più comuni di questo difetto è un'istruzione di espressione ne
 *p++;
 ```
 
-Se lo scopo di questa istruzione è semplicemente incrementare il `p`puntatore, la dereferenziazione non è necessaria. Tuttavia, se lo scopo è quello di incrementare la posizione a cui fa riferimento `p`, il programma non si comporta come previsto perché `p++` costrutto viene interpretato come `(p++)` anziché `(*p)++`.
+Se lo scopo di questa istruzione è semplicemente incrementare il puntatore `p` , la dereferenziazione non è necessaria. Tuttavia, se lo scopo è quello di incrementare la posizione `p` a cui punta, il programma non si comporta come previsto perché il `p++` costrutto viene interpretato come `(p++)` anziché `(*p)++` .
 
 ## <a name="example"></a>Esempio
 
