commit translated contents

--- a/docs/code-quality/c26437.md
+++ b/docs/code-quality/c26437.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26437 DONT_SLICE'
 title: C26437
 ms.date: 10/07/2019
 ms.topic: conceptual
@@ -7,29 +8,29 @@ f1_keywords:
 helpviewer_keywords:
 - C26437
 ms.assetid: ed2f55bc-a6d8-4cc4-8069-5c96e581a96a
-ms.openlocfilehash: 213a2d6fc802865513fbcf261c8a7b384adf3d45
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: a61ccca634e97aa69a40858188e7c84bc97583a8
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369566"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305884"
 ---
 # <a name="c26437-dont_slice"></a>C26437 DONT_SLICE
 
-"Non affettare."
+"Non sezionare".
 
-**Linee guida**di base : [ES.63: Non tagliare](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-slice)
+**Linee guida di base di C++**: [es. 63: non sezionare](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-slice)
 
-[Il sezionamento](https://en.wikipedia.org/wiki/Object_slicing) è consentito dal compilatore e può essere visualizzato come un caso speciale di cast implicito pericoloso. Anche se viene eseguita intenzionalmente e non porta a problemi immediati, è ancora altamente sconsigliato poiché rende il codice piuttosto non gestibile forzando requisiti aggiuntivi sui tipi di dati correlati. Ciò è particolarmente vero se i tipi sono polimorfici o implicano la gestione delle risorse.
+Il [sezionamento](https://en.wikipedia.org/wiki/Object_slicing) è consentito dal compilatore e può essere visualizzato come un caso speciale di cast implicito pericoloso. Anche se viene eseguita intenzionalmente e non comporta problemi immediati, è ancora molto sconsigliato poiché rende il codice piuttosto non gestibile forzando requisiti aggiuntivi sui tipi di dati correlati. Questo vale soprattutto se i tipi sono polimorfici o coinvolgono la gestione delle risorse.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-- Questa regola analizzerebbe non solo le assegnazioni esplicite, ma anche il sezionamento implicito che si verifica quando il risultato viene restituito dalla funzione corrente o i dati passati come argomenti ad altre funzioni.
-  - Gli avvisi segnalano anche i casi in cui l'assegnazione non comporta il sezionamento dei dati reali (ad esempio, se i tipi sono vuoti o non effettuano manipolazioni di dati pericolose). Tali avvisi devono comunque essere risolti per evitare regressioni indesiderate se i dati dei tipi o il comportamento cambiano in futuro.
+- Questa regola avvisa non solo sulle assegnazioni esplicite, ma anche sull'operazione di sezionamento implicita che si verifica quando il risultato viene restituito dalla funzione corrente o dai dati passati come argomenti ad altre funzioni.
+  - Gli avvisi possono inoltre contrassegnare i casi in cui l'assegnazione non implica il sezionamento reale dei dati, ad esempio se i tipi sono vuoti o non si eseguono manipolazioni di dati pericolose. Tali avvisi devono comunque essere risolti per impedire eventuali regressioni indesiderate se i tipi di dati o di comportamento cambiano in futuro.
 
 ## <a name="example"></a>Esempio
 
-affettare punti a obsoleto
+sezionamento di punti a obsoleto
 
 ```cpp
 interface
@@ -51,7 +52,7 @@ bool read_id(stream &s, id &v) {
 }
 ```
 
-affettare i punti a obsoleti, interfaccia - corretto
+sezionamento di punti a obsoleto, con correzione dell'interfaccia
 
 ```cpp
 // ...
