--- a/docs/code-quality/c26450.md
+++ b/docs/code-quality/c26450.md
@@ -1,4 +1,5 @@
 ---
+description: "Altre informazioni su: overflow aritmetico: l'operazione '% operator%' causa l'overflow in fase di compilazione. Usare un tipo più ampio per archiviare gli operandi"
 title: C26450
 keywords: C26450
 ms.date: 01/08/2017
@@ -9,18 +10,18 @@ helpviewer_keywords:
 - C26450
 dev_langs:
 - C++
-ms.openlocfilehash: 7fc6e626312a3705dc688614bab5df3317d937c6
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 221cc2cabeb9a2063e022ae9b20b18cc0a65df51
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81317013"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305793"
 ---
-# <a name="arithmetic-overflow-operator-operation-causes-overflow-at-compile-time-use-a-wider-type-to-store-the-operands"></a>Overflow aritmetico: l'operazione '%operator%' causa un overflow in fase di compilazione. Usare un tipo più ampio per memorizzare gli operandi
+# <a name="arithmetic-overflow-operator-operation-causes-overflow-at-compile-time-use-a-wider-type-to-store-the-operands"></a>Overflow aritmetico: l'operazione '% operator%' causa l'overflow in fase di compilazione. Usare un tipo più ampio per archiviare gli operandi
 
-Questo avviso indica che un'operazione aritmetica è stata dimostrabilmente congrande in fase di compilazione. Ciò può essere affermato quando gli operandi sono tutte costanti in fase di compilazione.  Attualmente, controlliamo le operazioni di spostamento a sinistra, moltiplicazione, addizione e sottrazione per tali overflow.
+Questo avviso indica che un'operazione aritmetica è stata comprovata in fase di compilazione. Questa operazione può essere dichiarata quando gli operandi sono tutte costanti in fase di compilazione.  Attualmente si controllano le operazioni di spostamento a sinistra, moltiplicazione, addizione e sottrazione per tali overflow.
 
-Nota: C4307 è un segno di spunta simile nel compilatore Microsoft C.
+Nota: C4307 è un controllo simile nel compilatore Microsoft C++.
 
 ## <a name="example-1"></a>Esempio 1
 
@@ -34,7 +35,7 @@ int multiply()
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente.
+Per correggere il problema, usare il codice seguente.
 
 ```cpp
 long long multiply()
@@ -58,7 +59,7 @@ int add()
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente:To correct this warning, use the following code:
+Per correggere il problema, usare il codice seguente:
 
 ```cpp
 long long add()
@@ -82,7 +83,7 @@ int subtract()
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente.
+Per correggere il problema, usare il codice seguente.
 
 ```cpp
 long long subtract()
@@ -94,6 +95,6 @@ long long subtract()
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[ES.103: Non traboccare](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-overflow)
+[ES. 103: non overflow](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-overflow)
