--- a/docs/code-quality/c26438.md
+++ b/docs/code-quality/c26438.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26438 NO_GOTO'
 title: C26438
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26438
 ms.assetid: c7b3f59c-fb2f-4816-bda4-0fad23c80d83
-ms.openlocfilehash: 4750f84ef2b7b92f0c11acae1359db022fb88a1f
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 60fcf6c02be1e49618fa0c364618073340a06a4a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88843755"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305871"
 ---
 # <a name="c26438-no_goto"></a>NO_GOTO C26438
 
@@ -23,7 +24,7 @@ ms.locfileid: "88843755"
 
 L'uso di **`goto`** è ampiamente considerato una procedura pericolosa e soggetta a errori. È accettabile solo nel codice generato, ad esempio in un parser generato da una grammatica. Con le funzionalità e le utilità moderne di C++ fornite dalla libreria di supporto delle linee guida, è facile evitarle **`goto`** completamente.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questa regola genera un avviso su qualsiasi occorrenza di **`goto`** , anche se si verifica nel codice inattivo, ad eccezione del codice del modello che non viene mai usato e quindi ignorato dal compilatore.
 - Gli avvisi possono essere moltiplicati quando una macro contiene **`goto`** . I meccanismi di reporting correnti puntano a tutte le istanze in cui tale macro viene espansa. Spesso può essere risolto in un'unica posizione cambiando la macro o evitando il suo utilizzo a favore di meccanismi più gestibili.
