--- a/docs/code-quality/c26441.md
+++ b/docs/code-quality/c26441.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26441 NO_UNNAMED_GUARDS'
 title: C26441
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26441
 ms.assetid: f923c422-ed01-4644-b40b-93f15fc5bb93
-ms.openlocfilehash: a7209e148b4fec632b63e557f4c33fd05ff85d80
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 1b45b44d58696b30b081b3ca85daf1b501cb8874
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88839251"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305858"
 ---
 # <a name="c26441-no_unnamed_guards"></a>NO_UNNAMED_GUARDS C26441
 
@@ -22,7 +23,7 @@ ms.locfileid: "88839251"
 
 La libreria standard fornisce alcune classi utili che consentono di controllare l'accesso simultaneo alle risorse. Gli oggetti di tali tipi bloccano l'accesso esclusivo per tutta la durata del ciclo di vita. Questo implica che tutti gli oggetti di blocco devono essere denominati, ovvero avere una durata ben definita che si estende lungo il periodo in cui vengono eseguite le operazioni di accesso. Quindi, la mancata assegnazione di un oggetto Lock a una variabile è un errore che in realtà Disabilita il meccanismo di blocco (poiché le variabili temporanee sono temporanee). Questa regola tenta di rilevare semplici casi di comportamento imprevisto.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Vengono rilevati solo i tipi di blocco standard: std:: scoped_lock, std:: unique_lock e std:: lock_quard.
   - Vengono analizzate solo le chiamate semplici ai costruttori. Un'espressione di inizializzazione più complessa può produrre risultati non accurati, ma si tratta piuttosto di uno scenario insolito.
