--- a/docs/code-quality/c26445.md
+++ b/docs/code-quality/c26445.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26445 NO_SPAN_REF'
 title: C26445
 ms.date: 03/22/2018
 ms.topic: reference
@@ -6,30 +7,30 @@ f1_keywords:
 - C26445
 helpviewer_keywords:
 - C26445
-ms.openlocfilehash: 8d0f2425b26f7f7cbf87f2925172f0d7a636c9b5
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 6129932300885c31cef2a075e32458530385fb08
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369880"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305806"
 ---
-# <a name="c26445-no_span_ref"></a>C26445 NO_SPAN_REF
+# <a name="c26445-no_span_ref"></a>NO_SPAN_REF C26445
 
-Un riferimento `gsl::span` `std::string_view` o può essere un'indicazione di un problema a vita.
+Un riferimento a `gsl::span` o `std::string_view` può essere un'indicazione di un problema di durata.
 
-## <a name="c-core-guidelines"></a>Linee guida di base di C
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
-[GSL.view: Viste](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#gslview-views)
+[GSL. View: visualizzazioni](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#gslview-views)
 
-Questa regola rileva i problemi di durata che possono verificarsi nel codice migrato dai contenitori standard ai nuovi tipi di intervallo e visualizzazione. Tali tipi possono essere considerati come "riferimenti ai buffer". L'utilizzo di un riferimento a un intervallo o a una vista crea un ulteriore livello di riferimento indiretto. Tale riferimento indiretto è spesso inutile e può essere fonte di confusione per i manutentori. Gli intervalli sono economici da copiare e possono essere restituiti per valore dalle chiamate di funzione. Ovviamente, tali risultati della chiamata non dovrebbero mai essere referenziati.
+Questa regola rileva piccoli problemi di durata che possono verificarsi nel codice migrato dai contenitori standard ai nuovi tipi span e View. Tali tipi possono essere considerati come "riferimenti ai buffer". L'utilizzo di un riferimento a un intervallo o a una vista crea un ulteriore livello di riferimento indiretto. Questo riferimento indiretto non è spesso necessario e può essere confuso per i gestori. Gli intervalli sono a basso costo da copiare e possono essere restituiti per valore dalle chiamate di funzione. Ovviamente, non è necessario fare riferimento a questi risultati delle chiamate.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-- La regola rileva i riferimenti a gsl::span<>, gsl::basic_string_span<> e std::basic_string_view<>  (inclusi gli alias per le istanze).
-- Attualmente gli avvisi vengono generati solo nelle dichiarazioni e nelle istruzioni return. Questa regola può essere estesa in futuro per contrassegnare anche i parametri di funzione.
-- L'implementazione di questa regola è leggera non tenta di tracciare le durate effettive. L'utilizzo di riferimenti può comunque avere senso in alcuni scenari. In questi casi, i falsi positivi possono essere soppressi in modo sicuro.
+- La regola rileva i riferimenti a GSL:: span<>, GSL:: basic_string_span<> e std:: basic_string_view<>  (inclusi gli alias per le creazioni di istanze).
+- Attualmente gli avvisi vengono generati solo per le dichiarazioni e le istruzioni return. Questa regola può essere estesa in futuro anche per contrassegnare i parametri della funzione.
+- L'implementazione di questa regola è Lightweight non tenta di tracciare la durata effettiva. L'uso di riferimenti può comunque essere utile in alcuni scenari. In questi casi, i falsi positivi possono essere eliminati in modo sicuro.
 
-## <a name="example-reference-to-a-temporary"></a>Esempio: riferimento a un temporaneoExample: Reference to a temporary
+## <a name="example-reference-to-a-temporary"></a>Esempio: riferimento a un oggetto temporaneo
 
 ```cpp
 // Old API - uses string reference to avoid data copy.
