--- a/docs/code-quality/c26448.md
+++ b/docs/code-quality/c26448.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26448 USE_GSL_FINALLY'
 title: C26448
 ms.date: 03/22/2018
 ms.topic: reference
@@ -6,12 +7,12 @@ f1_keywords:
 - C26448
 helpviewer_keywords:
 - C26448
-ms.openlocfilehash: 2b33bfb84bdd491fba48495584e2d455c4eaedbf
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 8b71ae258a2bb048604f3d2a1ca5268c6ad26c90
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87226099"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305819"
 ---
 # <a name="c26448-use_gsl_finally"></a>USE_GSL_FINALLY C26448
 
@@ -23,7 +24,7 @@ La libreria di supporto delle linee guida fornisce un'utile utilità per impleme
 
 Esistono anche casi in cui le azioni finali vengono eseguite in una modalità di tipo C obsoleta usando le **`goto`** istruzioni, che in genere sono sconsigliate da [C26438 NO_GOTO](c26438.md)). È difficile rilevare l'intenzione esatta nel codice usato molto **`goto`** , ma alcune euristiche possono aiutare a trovare candidati migliori per la pulizia.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Questa regola è molto leggera e usa nomi di etichetta per indovinare le opportunità di usare gli oggetti azione finali.
 - I nomi di etichetta che possono generare un avviso contengono parole come "end", "Final", "clean" e così via.
