commit translated contents

--- a/docs/code-quality/c6401.md
+++ b/docs/code-quality/c6401.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6401'
 title: C6401
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,24 +8,24 @@ f1_keywords:
 helpviewer_keywords:
 - C6401
 ms.assetid: d57b1c94-57a3-4d4b-a7de-8b9ffbac3ebe
-ms.openlocfilehash: d4fe62cadf01bfedb8b3144c9ed6ba18c69d1024
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: b22146d6449e3ec38e44c9387d8495c321a9be3d
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419390"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303011"
 ---
 # <a name="c6401"></a>C6401
 
-> avviso C6401: l'uso di \<nome della funzione > in impostazioni locali predefinite per eseguire un confronto senza distinzione tra maiuscole e minuscole con la stringa costante \< nome stringa >. Produce risultati imprevisti in impostazioni locali diverse dall'inglese
+> avviso C6401: utilizzo \<function name> di in impostazioni locali predefinite per eseguire un confronto senza distinzione tra maiuscole e minuscole con la stringa costante \< string name> . Produce risultati imprevisti in impostazioni locali diverse dall'inglese
 
 Questo avviso indica che viene eseguito un confronto senza distinzione tra maiuscole e minuscole in una stringa costante quando si specificano le impostazioni locali predefinite; in genere è previsto un confronto indipendente dalle impostazioni locali.
 
 La conseguenza tipica di questo difetto è un comportamento errato nelle impostazioni locali non in lingua inglese. Ad esempio, in turco, ". gif" non corrisponderà a ". GIF "; in vietnamita, "LogIn" non corrisponderà a "LOGIN".
 
-La funzione `CompareString` accetta le impostazioni locali come argomento; Tuttavia, se si passano le impostazioni locali predefinite, ad esempio la costante `LOCALE_USER_DEFAULT`, si verificheranno comportamenti diversi in impostazioni locali diverse, a seconda del valore predefinito dell'utente. In genere, i confronti senza distinzione tra maiuscole e minuscole in una stringa costante devono essere eseguiti in un confronto indipendente dalle impostazioni locali.
+La `CompareString` funzione accetta le impostazioni locali come argomento. Tuttavia, il passaggio di impostazioni locali predefinite, ad esempio la costante, provocherà `LOCALE_USER_DEFAULT` comportamenti diversi in impostazioni locali diverse, a seconda del valore predefinito dell'utente. In genere, i confronti senza distinzione tra maiuscole e minuscole in una stringa costante devono essere eseguiti in un confronto indipendente dalle impostazioni locali.
 
-Per eseguire un confronto indipendente dalle impostazioni locali utilizzando `CompareString` in Windows XP, il primo parametro deve essere la costante `LOCALE_INVARIANT`; ad esempio, per eseguire un test indipendente dalle impostazioni locali per verificare se `pString` corrisponde a file1. gif ignorando le differenze tra maiuscole e minuscole, usare una chiamata come:
+Per eseguire un confronto indipendente dalle impostazioni locali utilizzando `CompareString` in Windows XP, il primo parametro deve essere la costante `LOCALE_INVARIANT` . ad esempio, per eseguire un test indipendente dalle impostazioni locali che `pString` corrisponda file1.gif ignorando le differenze tra maiuscole e minuscole, utilizzare una chiamata come:
 
 ```cpp
 CompareString(LOCALE_INVARIANT,
