--- a/docs/code-quality/c6216.md
+++ b/docs/code-quality/c6216.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6216'
 title: C6216
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6216
 ms.assetid: d5c4dcf9-bfd7-4604-804f-9cc41b08d060
-ms.openlocfilehash: 293d8748c4c051882646be94779e35a6eae7f084
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 5e769a2791b31a69d7ab512511afcdd87cbd971e
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420657"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303271"
 ---
 # <a name="c6216"></a>C6216
 
 > avviso C6216: cast inserito dal compilatore tra tipi integrali semanticamente diversi: da un tipo Boolean a HRESULT
 
-Un tipo booleano viene usato come `HRESULT` senza eseguire il cast esplicito. I tipi booleani indicano l'esito positivo di un valore diverso da zero. l'operazione Success (`S_OK`) in `HRESULT` è indicata da un valore pari a 0.  Questo significa che un valore booleano false usato come `HRESULT` indicherà `S_OK`, che è spesso un errore.
+Un tipo booleano viene usato come oggetto `HRESULT` senza che venga eseguito il cast esplicito. I tipi booleani indicano l'esito positivo di un valore diverso da zero. Success ( `S_OK` ) in `HRESULT` è indicato da un valore pari a 0.  Ciò significa che un valore booleano false usato come `HRESULT` indicherebbe `S_OK` , che è spesso un errore.
 
 ## <a name="example"></a>Esempio
 
@@ -49,6 +50,6 @@ HRESULT f( REFGUID riid1, REFGUID riid2 )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` è equivalente a `HRESULT`.
+Per questo avviso, il `SCODE` tipo è equivalente a `HRESULT` .
 
 Per ulteriori informazioni, vedere [macro SUCCEEDED](/windows/win32/api/winerror/nf-winerror-succeeded) e [macro failed](/windows/win32/api/winerror/nf-winerror-failed).
